Adding Bookmark Endpoints
