# api/api_router.go
@@ -3,6 +3,7 @@ package api
 import (
 	swaggerDocs "github.com/ghostrepo00/go-dashboard-api/docs"
 	"github.com/ghostrepo00/go-dashboard-api/domain/model"
+	"github.com/ghostrepo00/go-dashboard-api/features/bookmark"
 	"github.com/ghostrepo00/go-dashboard-api/features/notes"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -19,5 +20,6 @@ func SetupSwagger(router *gin.Engine, setting *model.AppSettings) {
 func SetupRouters(route *gin.Engine, setting *model.AppSettings, dbClient *gorm.DB) *gin.Engine {
 	api := route.Group(setting.Api.BasePath)
 	notes.NotesRouter(api, setting, dbClient)
+	bookmark.BookmarkRouter(api, setting, dbClient)
 	return route
 }
