# domain/model/favicon.go
@@ -1,0 +1,7 @@
+package model
+
+type Favicon struct {
+	DownloadUrl string `json:"downloadUrl"`
+	FileName    string `json:"fileName"`
+	ImageUrl    string `json:"imageUrl"`
+}
